--- a/style.css
+++ b/style.css
@@ -468,6 +468,10 @@ p:first-child {
   font-weight: bold;
   font-size: 1rem;
 }
+p {
+  width: 60ch;
+  max-width: 100%;
+}
 
 .mainContainer-right-form {
 
@@ -477,9 +481,11 @@ p:first-child {
 
 .mainContainer-right-form-formContainer {
   display: flex;
+  flex-wrap: wrap;
   font-size: 0.7rem;
   justify-content: flex-start;
-  gap: 20px;
+  row-gap: 5px;
+  column-gap: 40px;
 }
 
 input,
@@ -488,7 +494,7 @@ label {
 }
 
 input {
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   border-radius: 5px;
   border: 1px solid rgb(212, 213, 219);
   outline: none;
@@ -499,4 +505,31 @@ input {
 input:focus {
   border: 1px solid rgb(14, 27, 125);
   box-shadow: 1px 1px 2px rgb(14, 27, 125);
+}
+hr{
+  width: 100%;
+  border: 0;
+  margin: 0;
+}
+
+.mainContainer-right-buttons {
+  padding: 20px 50px;
+}
+.mainContainer-right-buttons a:link,
+.mainContainer-right-buttons a:visited {
+  color: rgb(68, 53, 53);
+}
+
+button{
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(68, 53, 53);
+  padding: 5px 20px;
+  color: rgb(255, 255, 255);
+  font-size: .9rem;
+  margin-bottom: 15px;
+  cursor: pointer;
+}
+button:hover{
+  background-color: rgba(68, 53, 53, 0.76);
 }
